tests/baselines/reference/recursiveBaseCheck4.errors.txt
==== tests/cases/compiler/recursiveBaseCheck4.ts (2 errors) ====
    class M<T> extends M<string> { }
          ~
!!! recursiveBaseCheck4.ts(1,7): error TS2100: Type 'M<T>' recursively references itself as a base type.
    (new M).blah;
            ~~~~
!!! recursiveBaseCheck4.ts(2,9): error TS2094: The property 'blah' does not exist on value of type 'M<{}>'.